--- a/Egipcia.html
+++ b/Egipcia.html
@@ -12,7 +12,7 @@
 <body>
 <body background="fon5.jpg">
 <div class="img">
-<img src="anu.Jpg" align="right" height=350px widgt=450px border=3>
+<img src="ro.Jpg" align="right" height=350px widgt=450px border=3>
 </div>
 
 <div class="text">
