--- a/Egipcia.html
+++ b/Egipcia.html
@@ -11,9 +11,10 @@
 
 <body>
 <body background="fon5.jpg">
-<div class="img">
+</body>
+
 <img src="ro.Jpg" align="right" height=350px widgt=450px border=3>
-</div>
+
 
 <div class="text">
 <font size="5">
