--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ Escoja un apartado:
 <button style="background-color:#EBE47D;height:40; width:120; font-family: Arial Rounded MT;font-size: 20px;cursor: pointer;" onclick="window.location.href='Humanos.html'">Humanos</button>
 </td>
 <td>
-<button style="background-color:#EBE47D;height:40; width:120; font-family: Arial Rounded MT;font-size: 20px;cursor: pointer;" onclick="window.location.href='lafelicidad.html'">lafelicidad</button>
+<button style="background-color:#EBE47D;height:40; width:120; font-family: Arial Rounded MT;font-size: 20px;cursor: pointer;" onclick="window.location.href='Lafelicidad.html'">felicidad</button>
 </td>
 </tr>
 </table>
